<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.UserActivityDetail">

    <TextView
        android:id="@+id/detailss"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernamed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="70dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/username"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/circleImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailss"

        />

    <TextView
        android:id="@+id/textname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nama"
        app:layout_constraintStart_toStartOf="@id/usernamed"
        app:layout_constraintTop_toBottomOf="@id/circleImageView" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="315dp"
        app:layout_constraintStart_toStartOf="@id/usernamed"
        app:layout_constraintTop_toBottomOf="@+id/usernamed"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/detailfollower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="25dp"
        android:text="@string/_00"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="@id/nametext"
        app:layout_constraintStart_toStartOf="@id/nametext"
        app:layout_constraintTop_toTopOf="@id/circleImageView" />

    <TextView
        android:id="@+id/nametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/follower"

        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@id/circleImageView"
        app:layout_constraintTop_toBottomOf="@id/detailfollower" />

    <TextView
        android:id="@+id/detailfollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="25dp"
        android:text="@string/_00"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="@id/followertext"
        app:layout_constraintStart_toStartOf="@id/followertext"
        app:layout_constraintTop_toTopOf="@id/circleImageView" />

    <TextView
        android:id="@+id/followertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/following"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@id/nametext"
        app:layout_constraintTop_toBottomOf="@id/detailfollower" />

    <LinearLayout
        android:id="@+id/hiasan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/abu"

        app:layout_constraintTop_toBottomOf="@id/textname">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textAlignment="center"

            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>



    <TextView
        android:id="@+id/textcompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:text="@string/company"
        app:layout_constraintTop_toBottomOf="@id/usernamed"
        app:layout_constraintStart_toStartOf="@id/circleImageView"

        />

    <TextView
        android:id="@+id/Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:text="@string/location"
        app:layout_constraintTop_toBottomOf="@id/hiasan"
        app:layout_constraintStart_toStartOf="@id/hiasan"
        />

    <TextView
        android:id="@+id/textlocation"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="0dp"
        android:textAlignment="center"
        android:textSize="8dp"
        android:text="@string/text_location"
        app:layout_constraintTop_toBottomOf="@id/Location"
        app:layout_constraintStart_toStartOf="@id/Location"
        app:layout_constraintEnd_toEndOf="@id/Location"
        />

    <TextView
        android:id="@+id/Repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="50dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:text="@string/repository"
        app:layout_constraintTop_toBottomOf="@id/hiasan"
        app:layout_constraintEnd_toEndOf="@id/hiasan"
        />

    <TextView
        android:id="@+id/textrepository"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="0dp"
        android:maxLines="2"
        android:text="@string/text_repository"
        app:layout_constraintTop_toBottomOf="@id/Repository"
        app:layout_constraintStart_toStartOf="@id/Repository"
        app:layout_constraintEnd_toEndOf="@id/Repository"
        />

    <LinearLayout
        android:id="@+id/garis"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/textlocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/abu">


    </LinearLayout>

   <com.google.android.material.tabs.TabLayout
       android:id="@+id/table"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/garis"
       android:background="@color/biru"
       />
    
    <androidx.viewpager2.widget.ViewPager2

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/viewpager"
        app:layout_constraintTop_toBottomOf="@id/table"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/ic_company"
        app:layout_constraintEnd_toStartOf="@id/textcompany"
        app:layout_constraintTop_toTopOf="@id/textcompany"
        app:layout_constraintBottom_toBottomOf="@id/textcompany"
        app:layout_constraintStart_toStartOf="@id/usernamed"
        />

    <ProgressBar
        android:id="@+id/bars_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible"
        />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textOn=""
        android:textOff=""
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:background="@drawable/favorite_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailss" />


</androidx.constraintlayout.widget.ConstraintLayout>